--- a/src/jobOptions/pipeline/README
+++ b/src/jobOptions/pipeline/README
@@ -1,3 +1,7 @@
+August 10, 2007 - awb
+Copied files from current LatIntegration. These JOs are meant for pipeline 2.
+
+------
 The directory contains job option files that are
 used in the pipeline for data processing at SLAC 
 and also for MC production.
